Updated sign in flow with top bar

--- a/public/style.css
+++ b/public/style.css
@@ -1,72 +1,72 @@
+/*
+    Make every pixel alignment value a multiple of 5px to make it consistent
+*/
+:root {
+    --page-color: #eceff1;
+    --top-bar-color: #eceff1;
+    --top-bar-dropdown-color: #eceff1;
+    --text-color: #000000de;
+    --box-shadow: 0px 5px 5px #00000069;
+}
 
 body {
-    background: #ECEFF1;
-    color: rgba(0, 0, 0, 0.87);
+    background: var(--page-color);
+    color: var(--text-color);
     font-family: Roboto, Helvetica, Arial, sans-serif;
     margin: 0;
     padding: 0;
 }
 
-#message {
-    background: white;
-    max-width: 360px;
-    margin: 100px auto 16px;
-    padding: 32px 24px;
-    border-radius: 3px;
+.flex {
+    display: flex;
+    cursor: pointer;
+    user-select: none;
 }
 
-#message h2 {
-    color: #ffa100;
-    font-weight: bold;
-    font-size: 16px;
-    margin: 0 0 8px;
+#top-bar {
+    position: sticky;
+    display: flex;
+    justify-content: space-between;
+    top: 0px;
+    margin: 0;
+    background: var(--top-bar-color);
+    box-shadow: var(--box-shadow);
 }
 
-#message h1 {
-    font-size: 22px;
-    font-weight: 300;
-    color: rgba(0, 0, 0, 0.6);
-    margin: 0 0 16px;
+#top-bar-logo p {
+    margin: auto 10px auto 5px;
 }
 
-#message p {
-    line-height: 140%;
-    margin: 16px 0 24px;
-    font-size: 14px;
+#top-bar-logo img {
+    height: 50px;
+    margin: 5px;
 }
 
-#message a {
+#top-bar-account {
+    position: inline-block;
+}
+
+#top-bar-account p {
+    margin: auto 0px auto 10px;
+    position: relative;
+}
+
+.player-photo {
+    height: 50px;
+    margin: 5px;
+    border-radius: 50%;
+}
+
+#top-bar-account:hover #top-bar-account-dropdown {
     display: block;
-    text-align: center;
-    background: #039be5;
-    text-transform: uppercase;
-    text-decoration: none;
-    color: white;
-    padding: 16px;
-    border-radius: 4px;
 }
 
-#message,
-#message a {
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-}
-
-#load {
-    color: rgba(0, 0, 0, 0.4);
-    text-align: center;
-    font-size: 13px;
-}
-
-@media (max-width: 600px) {
-
-    body,
-    #message {
-        margin-top: 0;
-        background: white;
-        box-shadow: none;
-    }
-
-    body {
-        border-top: 16px solid #ffa100;
-    }
+#top-bar-account-dropdown {
+    display: none;
+    position: absolute;
+    right: 0;
+    margin: 0;
+    padding: 10px;
+    background: var(--top-bar-dropdown-color);
+    box-shadow: var(--box-shadow);
 }
